--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
@@ -11,9 +12,13 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<script type="module" src="./JS/projets.js"></script>
 </head>
+
 <body>
+
 <header>
+
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+
 	<nav>
 		<ul>
 			<li>projets</li>
@@ -22,8 +27,11 @@
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
+
 </header>
+
 <main>
+
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
@@ -35,12 +43,23 @@
 			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 		</article>
 	</section>
+
 	<section id="portfolio">
+
 		<h2>Mes Projets</h2>
+
+		<div class="filtres">
+			<button class="boutonFiltre" id="boutonFiltreTous">Tous</button>
+			<button class="boutonFiltre" id="boutonFiltreObjets">Objets</button>
+			<button class="boutonFiltre" id="boutonFiltreAppartements">Appartements</button>
+			<button class="boutonFiltre" id="boutonFiltreHotelsRestau">Hôtels & restaurants</button>
+		</div>
+
 		<div class="gallery">
 			
 		</div>
 	</section>
+
 	<section id="contact">
 		<h2>Contact</h2>
 		<p>Vous avez un projet ? Discutons-en !</p>
