ajoute page de connexion fonctionnelle

--- a/FrontEnd/acceuil_editeur.html
+++ b/FrontEnd/acceuil_editeur.html
@@ -11,6 +11,8 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script type="module" src="./JS/projets.js"></script>
+	<script type="module" src="./JS/acces_editeur.js"></script>
+	<script src="https://kit.fontawesome.com/029bf30f2f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,7 +27,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href='http://127.0.0.1:5500/FrontEnd/connexion.html' class="lien-entete">login</a></li>
+			<li><a href='http://127.0.0.1:5500/FrontEnd/connexion.html' class="lien-entete">logout</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -37,6 +39,10 @@
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
+			<a href="modale" class="edition">
+				<i class="fa-solid fa-pen-to-square"></i>
+				<p>modifier</p>
+			</a>
 		</figure>
 		<article>
 			<h2>Designer d'espace</h2>
@@ -49,6 +55,10 @@
 	<section id="portfolio">
 
 		<h2>Mes Projets</h2>
+		<a href="modale" class="edition">
+			<i class="fa-solid fa-pen-to-square"></i>
+			<p>modifier</p>
+		</a>
 
 		<div class="filtres">
 			<button class="boutonFiltre" id="boutonFiltreTous">Tous</button>
