--- a/FrontEnd/connexion.html
+++ b/FrontEnd/connexion.html
@@ -18,7 +18,7 @@
     <header>
         
         <div class="en-tete">
-            <a href='http://127.0.0.1:5500/FrontEnd/index.html' class="lien-logo">
+            <a href='./index.html' class="lien-logo">
             <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
             </a>
         
